# e-business

./: .gitignore  .project  Dockerfile  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
.dbeaver/: .credentials-config.json.bak  .data-sources.json.bak  credentials-config.json  data-sources.json  project-metadata.json  project-settings.json
Scripts/: Script.sql
core/: admin.py  serializers.py
core/migrations/: 0001_initial.py
likes/: models.py
likes/migrations/: 0001_initial.py
store/: admin.py  cache_utils.py  filter.py  models.py  pagination.py  serializers.py  task.py  urls.py  utils.py  views.py
store/migrations/: 0001_initial.py  0002_add_zip_to_address.py  0003_inter_to_char_alter_customer_phone.py  0004_product_slug.py  0005_alter_collection_options_alter_product_slug.py  0006_alter_cartitem_options_alter_cart_id_and_more.py  0007_advertisement.py  0008_user_to_customer_link.py  0009_alter_order_options.py
storefront/: celery.py  settings.py  urls.py
tags/: models.py  views.py
tags/migrations/: 0001_initial.py
tests/commons/: request_util.py
tests/testcase/: test_user.py
