[project]
name = "e-business"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amqp==5.3.1",
    "asgiref==3.10.0",
    "async-timeout==5.0.1",
    "billiard==4.2.2",
    "celery==5.5.3",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "defusedxml==0.7.1",
    "django==5.2.7",
    "django-filter==25.2",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "djoser==2.3.3",
    "drf-nested-routers==0.95.0",
    "idna==3.10",
    "kombu==5.5.4",
    "mysqlclient==2.2.7",
    "naked==0.1.32",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "pip==22.3.1",
    "prompt-toolkit==3.0.52",
    "pycparser==2.23",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python3-openid==3.2.0",
    "pyyaml==6.0.3",
    "redis==6.4.0",
    "redis-cli==1.0.1",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rest-framework-simplejwt==0.0.2",
    "setuptools==65.5.1",
    "six==1.17.0",
    "social-auth-app-django==5.6.0",
    "social-auth-core==4.8.1",
    "sqlparse==0.5.3",
    "status==0.2.5",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "vine==5.1.0",
    "wcwidth==0.2.14",
    "wheel==0.38.4",
]
